<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_general_title">
        <ListPreference android:key="@string/settings_frame_size_key" android:title="@string/settings_frame_size_title"></ListPreference>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings_detection_title">
    	<com.baldzarika.SliderPreference android:title="@string/settings_detection_treshold_title" android:key="@string/settings_detection_treshold_key"/>
    	<com.baldzarika.SliderPreference android:title="@string/settings_detection_min_features_title" android:key="@string/settings_detection_min_features_key"/>
    	<com.baldzarika.SliderPreference android:title="@string/settings_detection_max_diff_norm_title" android:key="@string/settings_detection_max_diff_norm_key"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_tracking_title">
    	<com.baldzarika.SliderPreference android:title="@string/settings_tracking_half_win_size_title" android:key="@string/settings_tracking_half_win_size_key"/>
    	<com.baldzarika.SliderPreference android:title="@string/settings_tracking_num_levels_title" android:key="@string/settings_tracking_num_levels_key"/>
    	<com.baldzarika.SliderPreference android:title="@string/settings_tracking_max_iterations_title" android:key="@string/settings_tracking_max_iterations_key"/>
    	<com.baldzarika.SliderPreference android:title="@string/settings_tracking_max_features_title" android:key="@string/settings_tracking_max_features_key"/>
    	<com.baldzarika.SliderPreference android:title="@string/settings_tracking_max_diff_norm_title" android:key="@string/settings_tracking_max_diff_norm_key"/>
    </PreferenceCategory>
</PreferenceScreen>
